--- a/modules/web/themes/havana/components/common/common.scss
+++ b/modules/web/themes/havana/components/common/common.scss
@@ -27,12 +27,16 @@
       font-family: $theme_fonts;
     }
 
+    label,
+    button {
+      font-size: 12px;
+      color: #464f52;
+    }
+
     input,
     select,
-    button,
-    label,
     textarea {
-      font-size: 12px;
+      font-size: 11px;
       color: #464f52;
     }
   }
